Add CMS classes
Co-authored-by: Rishi Keshav Pradeep <keshav.r.pradeep@gmail.com>

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="demo-inner-content">
             <!--/banner-info-->
             <div class="baner-info">
-                <h3>MB's Place</h3>
+                <h3 class='cushycms'>MB's Place</h3>
                 <p>The best place with the best taste <br> Home of the award-winning 3 way chili</p>
                 <a class="hvr-rectangle-out w3_play_icon1" href="#about">About</a>
                 <a class="hvr-rectangle-out w3_play_icon1" href="#menu">Menu</a>
